# python3-uhubctl

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  pytest.yml  release.yml
tests/: helper.py  test_hub.py  test_port.py  test_uhubctl_binary.py
uhubctl/: __init__.py  usb.py  utils.py
