[project]
name = "uhubctl"
version = "0.0.1"
authors = [
  { name="Nicolai Buchwitz", email="nb@tipi-net.de" },
]
description = "A basic Python wrapper for uhubctl"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nbuchwitz/python3-uhubctl"
"Bug Tracker" = "https://github.com/nbuchwitz/python3-uhubctl/issues"